# OpenCV-C-Projects

Face_Detection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  face-detection  face-detection.cpp
Virtual_Painter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color-picker  color-picker.cpp  virtual-painter  virtual-painter.cpp
